syntax = "proto3";

package go.micro.service.client;

import "google/api/annotations.proto";

service Client {
	rpc FizzBuzz(FizzBuzzRequest) returns (FizzBuzzResponse) {
		option (google.api.http) = {
			post: "/v1/fizzbuzz"
			body: "*"
		};
	}
}
message FizzBuzzRequest {
	int32 Int1 = 1 [json_name="int1"];
	int32 Int2 = 2 [json_name="int2"];
	int32 Limit = 3 [json_name="limit"];
	string Str1 = 4 [json_name="str1"];
	string Str2 = 5 [json_name="str2"];

}
message FizzBuzzResponse {
	repeated string Items = 6;
}